--- a/config.yml.dist
+++ b/config.yml.dist
@@ -1,4 +1,13 @@
 enable: true
-#containers:
-#  - Container1
-#  - Container2
+email:
+    enable: true
+    password: ""
+    username: ""
+    hostname : ""
+    url: ""
+    sender: ""
+    recipient: ""
+
+containers:
+  - Container1
+  - Container2
